@@ -1,3 +1,6 @@
+[B]1.3.5[/B]
+Fixed: directors (sometimes wrong director got scraped)
+
 [B]1.3.4[/B]
 Fixed: Fixed title and year scraping due to site changes
 
